公共工具Toll和Org完善，用户控制器添加EmptyController.class.php

--- a/Index/Tpl/success.html
+++ b/Index/Tpl/success.html
@@ -44,6 +44,9 @@
 			padding:3px;
 		}
 	</style>
+	<script>
+		window.setTimeout("<?php echo $url ?>",<?php echo $time ?>*1000);
+	</script>
 </head>
 <body>
 	<div class="_prompt">
